--- a/styles.css
+++ b/styles.css
@@ -454,6 +454,14 @@ html, body{
         display: none;
     }
 }
+.maincar {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  
 
 /* @media only screen and (max-width: 768px){
     body{
