--- a/styles.css
+++ b/styles.css
@@ -454,7 +454,7 @@ html, body{
         display: none;
     }
 }
-.maincar {
+.main-car {
     width: 100%;
     height: auto;
     position: relative;
