--- a/styles.css
+++ b/styles.css
@@ -431,6 +431,13 @@ html, body{
       letter-spacing: 2px;
       font-weight: bold;
     }
+    .main-car {
+        width: 100%;
+        height: fit-content;
+        position: relative;
+        top: 0;
+        left: 0;
+      }
   }
 
 
