--- a/styles.css
+++ b/styles.css
@@ -431,13 +431,6 @@ html, body{
       letter-spacing: 2px;
       font-weight: bold;
     }
-    .main-car {
-        width: 100%;
-        height: fit-content;
-        position: relative;
-        top: 0;
-        left: 0;
-      }
   }
 
 
@@ -470,18 +463,15 @@ html, body{
   }
   
 
-/* @media only screen and (max-width: 768px){
-    body{
+@media only screen and (max-width: 768px){
+    .main-car {
         width: 100%;
-        overflow-x: hidden;
-    }
-
-    .section-1{
-        width: 100%;
-
-    }
-
-} */
+        height: 100vh;
+        position: relative;
+        top: 0;
+        left: 0;
+      }
+}
 
 /* ------ section 2 ----- */
 
