--- a/styles.css
+++ b/styles.css
@@ -466,7 +466,7 @@ html, body{
 @media only screen and (max-width: 768px){
     .main-car {
         width: 100%;
-        height: 100vh;
+        height: 50%;
         position: relative;
         top: 0;
         left: 0;
