--- a/styles.css
+++ b/styles.css
@@ -466,10 +466,11 @@ html, body{
 @media only screen and (max-width: 768px){
     .main-car {
         width: 100%;
-        height: 50%;
+        height: 200px;
         position: relative;
         top: 0;
         left: 0;
+        z-index: -2;
       }
 }
 
