--- a/styles.css
+++ b/styles.css
@@ -466,12 +466,17 @@ html, body{
 @media screen and (max-width: 768px){
     .main-car {
         width: 100%;
-        height: 200px;
         position: relative;
         top: 0;
         left: 0;
         z-index: -2;
       }
+      .section-1{
+        height: 50vh;
+        width: 100vw;
+        background-color: black;
+        z-index: 0;
+    }
 }
 
 /* ------ section 2 ----- */
